# midas

./: .gitignore  PROJECT_SPEC.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  turbo.json
apps/backend/: .env.example  Dockerfile  README.md  package.json  pyproject.toml  railway.json
apps/backend/app/: __init__.py  main.py
apps/backend/app/agents/: __init__.py  base.py  graph.py  habit_analyst.py  reflection_coach.py
apps/backend/app/schemas/: __init__.py  auth.py  capabilities.py  chat.py  insights.py  journal.py  reflection.py  review.py
apps/backend/app/tools/: __init__.py  journal_tools.py  registry.py
apps/backend/midas/: __init__.py
apps/backend/midas/core/: __init__.py  audit.py  entitlements.py  insights.py  loader.py  memory.py  projections.py  registry.py  replay.py  review.py  runtime.py
apps/backend/midas/interfaces/: __init__.py  agents.py
apps/backend/scripts/: generate_types.py  replay_projections.py
apps/backend/tests/: __init__.py  conftest.py  fakes.py  test_api.py  test_graph.py  test_loader.py  test_memory_behavior.py  test_memory_integration.py  test_memory_product.py  test_memory_security.py  test_memory_unit.py  test_projection_runner.py  test_replay.py
apps/ios/: README.md  package.json  project.yml
apps/web/: README.md  next-env.d.ts  package.json  tsconfig.json  vercel.json
apps/web/app/: page.tsx  (+2 more)
docs/adr/: 001-repository-structure.md  002-backend-orchestration-fastapi-langgraph.md  003-vector-memory-weaviate-hybrid-strategy.md  004-zero-trust-security-e2b-sandboxes.md  (+17 more)
scripts/: start_memory_stack.sh
(+49 files in other folders)
