[project]
name = "midas-api"
version = "0.1.0"
description = "FastAPI backend scaffold for the Midas multi-agent AI system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "langchain-openai>=0.3.8",
    "langgraph>=0.6.7",
    "pydantic>=2.11.7",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

